it loks good and addUsers.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainMenu"></activity>
+        <activity android:name=".MainMenu" />
         <activity android:name=".AddUsers" />
         <activity android:name=".Checkers" />
         <activity android:name=".MusicList" />
@@ -29,7 +29,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <service android:name=".MusicService"/>
+
+        <service android:name=".MusicService" />
+
+        <activity android:name=".Score"></activity>
     </application>
 
 </manifest>
